fix: update route endpoints in users controller
